# cubix

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  cabal.project  cabal.project.ci  cabal.project.debug  cabal.project.release  compilation_notes.txt  cubix.cabal  devenv.local.nix  devenv.nix  devenv.yaml  fourmolu.yaml  hie.yaml  ips.md  package.yaml  stack.yaml
compdata/: .gitignore  .travis.yml  README.md  cubix-compdata.cabal  stack.yaml  upload-doc
compdata/examples/Examples/Multi/: Common.hs  Eval.hs  EvalI.hs  EvalM.hs
compdata/src-internal/Data/Comp/: SubsumeCommon.hs
compdata/src/Data/Comp/: Alt.hs  Dict.hs  Elem.hs  Multi.hs  Ops.hs
compdata/src/Data/Comp/Derive/: Utils.hs
compdata/src/Data/Comp/Multi/: Algebra.hs  Alt.hs  Annotation.hs  ConstrName.hs  Derive.hs  Equality.hs  Generic.hs  HFoldable.hs  HFunctor.hs  HTraversable.hs  Kinds.hs  Mapping.hs  Mutable.hs  Ops.hs  Ordering.hs  Projection.hs  Show.hs  Sum.hs  Term.hs  Variables.hs
compdata/src/Data/Comp/Multi/Derive/: ConstrName.hs  Equality.hs  Generic.hs  HFoldable.hs  HFunctor.hs  HTraversable.hs  LiftSum.hs  Ordering.hs  Show.hs  SmartConstructors.hs
compdata/testsuite/tests/: Data_Test.hs
compdata/testsuite/tests/Data/: Comp_Test.hs
compdata/testsuite/tests/Data/Comp/: Multi_Test.hs  Subsume_Test.hs
compdata/testsuite/tests/Data/Comp/Examples/: Multi.hs
compdata/testsuite/tests/Data/Comp/Multi/: Variables_Test.hs
compdata/testsuite/tests/Test/: Utils.hs
compstrat/: .gitignore  LICENSE  README.md  compstrat.cabal  stack.yaml
compstrat/Data/Comp/Multi/: Strategic.hs
compstrat/Data/Comp/Multi/Strategy/: Classification.hs  Derive.hs
compstrat/examples/: .gitignore
compstrat/examples/Examples/Multi/: Main.hs  Strat.hs  Syntax.hs
compstrat/src/Data/Comp/Multi/: Strategic.hs
comptrans/: LICENSE  comptrans.cabal  package.yaml
comptrans/Data/Comp/: Trans.hs
comptrans/Data/Comp/Derive/: Generic.hs
comptrans/Data/Comp/Trans/: Collect.hs  DeriveMulti.hs  DeriveTrans.hs  DeriveUntrans.hs  Util.hs
comptrans/examples/generics/: GenericExample.hs
comptrans/examples/java/: README
comptrans/src/Data/Comp/Trans/: DeriveMulti.hs  DeriveTrans.hs  DeriveUntrans.hs  Util.hs
cubix-benchmarks/: LICENSE  cubix-benchmarks.cabal
cubix-benchmarks/benchmarks/: Benchmarks.hs
cubix-benchmarks/benchmarks/reports/: 092117.html  092217_lua_O2.html  build_log.txt
cubix-benchmarks/benchmarks/reports/ghc-8.8/: 042920_O0.html  042920_O2.html  051920_O0.html  051920_O2.html  051920_O2_mainbench.prof  051920_mainbench_O0.prof  build_log_O0.txt
cubix-benchmarks/benchmarks/reports/ghc-8.8-sum-refactor/: 052120_O0.html  052120_O0_mainbench_O0.prof  052120_O0_mainbench_O0_with_dict_cons.prof  052120_O0_with_dict_cons.html  052220_O1_mainbench.prof  052220_O2.html  052220_O2_mainbench.prof  build_log_O2.txt
cubix-examples/: cubix-examples.cabal
cubix-examples/basic/: Main.hs
cubix-examples/dump-java-ast/: Main.hs
cubix-examples/java-pos-audit/: Main.hs
cubix-examples/java-span-check/: Main.hs
cubix-examples/java-ts-validate/: Main.hs
cubix-examples/languages/c/: Main.hs
cubix-examples/languages/java/: Main.hs
cubix-examples/languages/python/: Main.hs
cubix-examples/multi/: Main.hs
cubix-examples/src/Examples/: Strat.hs  Syntax.hs
cubix-move/: cubix-move.cabal
cubix-move/src/Cubix/Language/Move/: Modularized.hs
cubix-move/src/Language/Move/: Syntax.hs
cubix-solidity/: cubix-solidity.cabal
cubix-solidity/src/Cubix/Language/Solidity/: IPS.hs  Modularized.hs  ParsePretty.hs
cubix-solidity/src/Cubix/Language/Solidity/IPS/: Trans.hs  Types.hs
cubix-solidity/src/Cubix/Language/Solidity/Modularized/: Names.hs  Trans.hs  Types.hs
cubix-solidity/src/Cubix/Language/Solidity/Parametric/: Common.hs  Full.hs
cubix-sui-move/: LICENSE  cubix-sui-move.cabal  preserved_tokens.json
cubix-sui-move/app/: Main.hs
cubix-sui-move/debug/: DebugRoundtrip.hs
cubix-sui-move/examples/: Main.hs
cubix-sui-move/examples/Examples/: ConstantSummary.hs  CountCalls.hs  FunctionSize.hs  ListIdentifiers.hs  PublicNoReturn.hs  RenameIdent.hs  Shared.hs  SortByMutAssigns.hs  SortFunctions.hs  StructAbilities.hs  UnusedImports.hs
cubix-sui-move/src/Cubix/Language/Move/: IPS.hs  ParsePretty.hs
cubix-sui-move/src/Cubix/Language/SuiMove/: IPS.hs  Modularized.hs  Parse.hs  ParsePretty.hs  Pretty.hs  RawParse.hs
cubix-sui-move/src/Cubix/Language/SuiMove/IPS/: Hoist.hs  Trans.hs  Types.hs
cubix-sui-move/src/Language/SuiMove/: Syntax.hs
cubix-sui-move/test/: BannedConstructorTH.hs  BannedConstructorsSpec.hs  ParseSpec.hs  SourcePosSpec.hs  TransRoundtripSpec.hs
cubix-tree-sitter/: LICENSE  README.md  cubix-tree-sitter.cabal
cubix-tree-sitter/gen-ast/app/: Main.hs
cubix-tree-sitter/gen-ast/app/TreeSitter/GenerateAst/Internal/: CodeGen.hs  Data.hs  Grammar.hs
cubix-tree-sitter/gen-ast/data/: Ast.hs.template
cubix-tree-sitter/gen-mod/app/: Main.hs  Parser.hs
cubix-tree-sitter/gen-mod/app/TreeSitter/GenerateAst/Internal/: CodeGen.hs  Data.hs
cubix-tree-sitter/gen-mod/data/: Modularized.hs.template  ParsePretty.hs.template
cubix-tree-sitter/gen-mod/src/Data/Functor/Base/: Extra.hs
cubix-tree-sitter/gen-mod/src/Data/Vector/: Extra.hs
cubix-tree-sitter/gen-mod/src/TreeSitter/: Grammar.hs
cubix-tree-sitter/gen-mod/src/TreeSitter/Generate/: Data.hs  Parser.hs  Render.hs  Types.hs
cubix-tree-sitter/gen-mod/src/TreeSitter/GenerateAst/Internal/: CodeGen.hs  Data.hs  Grammar.hs  (+2 more)
cubix-tree-sitter/gen-mod/src/TreeSitter/Grammar/: Transform.hs
cubix-tree-sitter/gen-syntax/: Main.hs  Options.hs
cubix-tree-sitter/jq/: alias.jq
cubix-tree-sitter/src/AST/: Deserialize.hs  GenerateSyntax.hs  Token.hs
cubix-tree-sitter/src/Cubix/: TreeSitter.hs
cubix-tree-sitter/src/Streaming/: Extra.hs
cubix-tree-sitter/src/Text/Megaparsec/: Cubix.hs  TreeSitter.hs
tree-sitter-sui-move/: README.md  tree-sitter-sui-move.cabal
tree-sitter-sui-move/TreeSitter/: SuiMove.hs
tree-sitter-sui-move/cbits/: parser.c
tree-sitter-sui-move/cbits/tree_sitter/: tree-sitter-move.h
(+353 files in other folders)
