cabal-version: 3.4
name:          cubix-compdata
version:       1.0.2
synopsis:      Compositional Data Types for Cubix
description:   This is forked from Patrick Bahr's compdata library to be more tightly integrated with Cubix
category:      Generics
license:       BSD-3-Clause
license-file:  LICENSE
author:        Patrick Bahr, Tom Hvitved
maintainer:    paba@diku.dk
build-type:    Simple
bug-reports:   https://github.com/pa-ba/compdata/issues

tested-with:
  GHC == 9.8.4

common language
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts

common ghc-options
  ghc-options: -W

common dependencies
  build-depends:
    , base >= 4.19.2.0
    , containers >= 0.6.8
    , ghc-prim >= 0.11.0
    , vector >= 0.13.2.0

library internal
  import: language
  import: ghc-options
  import: dependencies
  hs-source-dirs: src-internal
  visibility: public
  exposed-modules:
    Data.Comp.SubsumeCommon
    Data.Comp.Elem
    Data.Comp.Alt

library
  import: language
  import: ghc-options
  import: dependencies
  hs-source-dirs: src
  exposed-modules:
    Data.Comp.Derive.Utils
    Data.Comp.Dict
    Data.Comp.Ops
    Data.Comp.Multi
    Data.Comp.Multi.Kinds
    Data.Comp.Multi.Term
    Data.Comp.Multi.Sum
    Data.Comp.Multi.HFunctor
    Data.Comp.Multi.HFoldable
    Data.Comp.Multi.HTraversable
    Data.Comp.Multi.Algebra
    Data.Comp.Multi.Annotation
    Data.Comp.Multi.Show
    Data.Comp.Multi.Equality
    Data.Comp.Multi.Ordering
    Data.Comp.Multi.Variables
    Data.Comp.Multi.Ops
    Data.Comp.Multi.Mapping
    Data.Comp.Multi.Derive
    Data.Comp.Multi.Generic
    Data.Comp.Multi.Projection
    Data.Comp.Multi.Mutable

  other-modules:
    Data.Comp.Multi.Derive.Generic
    Data.Comp.Multi.Derive.HFunctor
    Data.Comp.Multi.Derive.HFoldable
    Data.Comp.Multi.Derive.HTraversable
    Data.Comp.Multi.Derive.Equality
    Data.Comp.Multi.Derive.Ordering
    Data.Comp.Multi.Derive.Show
    Data.Comp.Multi.Derive.SmartConstructors
    Data.Comp.Multi.Alt

  build-depends:
    , cubix-compdata:internal
    , data-default >= 0.7.1.3
    , deepseq >= 1.5.1.0
    , mtl >= 2.3.1
    , template-haskell >= 2.21.0.0
    , th-expand-syns >= 0.4.12.0
    , transformers >= 0.6.1.0

test-suite test
  import: language
  import: ghc-options
  import: dependencies
  type: exitcode-stdio-1.0
  main-is: Data_Test.hs
  hs-source-dirs:
    testsuite/tests
    examples
  other-modules:
    Data.Comp.Examples.Multi
    Data.Comp.Multi.Variables_Test
    Data.Comp.Multi_Test
    Data.Comp.Subsume_Test
    Data.Comp_Test
    Examples.Multi.Common
    Examples.Multi.Eval
    Examples.Multi.EvalI
    Examples.Multi.EvalM

  build-depends:
    , cubix-compdata
    , cubix-compdata:internal
    , HUnit >= 1.6.2.0
    , QuickCheck >= 2.14.3
    , test-framework >= 0.8.2.2
    , test-framework-hunit >= 0.3.0.2
    , test-framework-quickcheck2 >= 0.3.0.6
