cabal-version: 3.4
name:          compstrat
version:       0.1.0.3
synopsis:      Strategy combinators for compositional data types
description:
    A library for strategic programming on compositional data types. See
    /The Essence of Strategic Programming/, <http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.104.5296&rep=rep1&type=pdf>,
    by Ralf Laemmel et al.
    .
    Strategic programming is a way of allowing traversals to be written in a highly
    generic and composable fashion.
    .
    The names and general interface are modeled on the KURE library,
    but this library tries to be as composable as the lens library.
    .
    The type of a
    strategy combinator is the same as the /Vertical/ type
    that ekmett proposed and rejected as an extension to the current
    lens library. A /Vertical/ is essentially a monadic traversal. This hence
    could potentially be merged with the lens library.
license:       BSD-3-Clause
license-file:  LICENSE
author:        James Koppel
maintainer:    jkoppel@mit.edu
category:      Language, Generics
build-type:    Simple

extra-source-files:
  README.md

tested-with:
  GHC == 9.8.4

common language
  default-language: Haskell2010

common ghc-options
  ghc-options: -W

source-repository head
  type: git
  location: https://github.com/jkoppel/compstrat

library
  import: language
  import: ghc-options
  hs-source-dirs: src
  exposed-modules:
    Data.Comp.Multi.Strategic
    Data.Comp.Multi.Strategy.Classification
    Data.Comp.Multi.Strategy.Derive

  build-depends:
    , base >= 4.19.2.0
    , cubix-compdata >= 1.0.2
    , mtl >= 2.3.1
    , parallel >= 3.2.2.0
    , template-haskell >= 2.21.0.0
    , th-expand-syns >= 0.4.12.0
    , transformers >= 0.6.1.0
