cabal-version: 3.4
name:          cubix-examples
version:       1.0.2
synopsis:      Example usage of Cubix framework
description:   Example usage of Cubix framework
category:      Language
license:       BSD-3-Clause
license-file:  LICENSE
author:        James Koppel
maintainer:    jkoppel@mit.edu
build-type:    Simple
bug-reports:   https://github.com/cubix-framework/cubix/issues

tested-with:
  GHC == 9.8.4

common language
  default-language: GHC2021
  default-extensions:
    ApplicativeDo
    DataKinds
    DefaultSignatures
    DerivingStrategies
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

common ghc-options
  ghc-options:
    -W -fno-warn-unused-foralls

common rts-options
  ghc-options:
    -rtsopts
    -threaded
    -with-rtsopts=-N

common dependencies
  build-depends:
    , base >= 4.19.2.0
    , compstrat >= 0.1.0.3
    , containers >= 0.6.8
    , cubix >= 0.7.0.12
    , cubix-compdata >= 1.0.2
    , mtl >= 2.3.1
    , transformers >= 0.6.1.0

library
  import: language
  import: ghc-options
  import: dependencies
  hs-source-dirs:
    src
  exposed-modules:
    Examples.Strat
    Examples.Syntax

executable basic
  import: language
  import: ghc-options
  import: rts-options
  import: dependencies
  hs-source-dirs:
    basic
  main-is: Main.hs
  build-depends:
    , cubix-examples
    , cubix-solidity >= 1.0.2
  
executable multi
  import: language
  import: ghc-options
  import: rts-options
  import: dependencies
  hs-source-dirs:
    multi
  main-is: Main.hs
  ghc-options:
    -freduction-depth=400
  build-depends:
    , cubix-examples
    , cubix-solidity >= 1.0.2
    , language-dot >= 0.1.2
    , temporary >= 1.3

executable language-c
  import: language
  import: ghc-options
  import: rts-options
  import: dependencies
  hs-source-dirs:
    languages/c
  main-is: Main.hs
  build-depends:
    , cubix-examples
    , language-c >= 0.5.3

executable language-java
  import: language
  import: ghc-options
  import: rts-options
  import: dependencies
  hs-source-dirs:
    languages/java
  main-is: Main.hs
  build-depends:
    , cubix-examples
    , language-java >= 0.2.8.2

executable language-javascript
  import: language
  import: ghc-options
  import: rts-options
  import: dependencies
  hs-source-dirs:
    languages/javascript
  main-is: Main.hs
  build-depends:
    , cubix-examples
    , language-javascript >= 0.6.0.10

-- executable language-lua
--   import: language
--   import: ghc-options
--   import: rts-options
--   import: dependencies
--   hs-source-dirs:
--     languages/lua
--   main-is: Main.hs
--   build-depends:
--     , cubix-examples
--     , lens >= 5.3.4
--     , text >= 2.1.1

executable language-python
  import: language
  import: ghc-options
  import: rts-options
  import: dependencies
  hs-source-dirs:
    languages/python
  main-is: Main.hs
  build-depends:
    , cubix-examples
    , language-python >= 0.6.2
