cabal-version: 3.4
name:          cubix-tree-sitter
version:       1.0.2
synopsis:      Cubix integration with Tree sitter parsing library
description:   Generate modularized syntax based on tree-sitter grammar definitions.
category:      Language
license:       BSD-3-Clause
license-file:  LICENSE
author:        Jakub Kopański
maintainer:    jakub@up-to-speed.ai
build-type:    Simple
bug-reports:   https://github.com/cubix-framework/cubix/issues

extra-source-files:
  gen-ast/data/Ast.hs.template
  gen-mod/data/Modularized.hs.template
  gen-mod/data/ParsePretty.hs.template

tested-with:
  GHC == 9.8.4

common language
  default-language: GHC2021
  default-extensions:
    ApplicativeDo
    DataKinds
    DefaultSignatures
    DerivingStrategies
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

common ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -- -Werror
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -fhide-source-paths
    -fwrite-ide-info
    -hiedir=.hie
    -haddock
    -j

common rts-options
  ghc-options:
    -rtsopts
    -threaded
    -with-rtsopts=-N

common dependencies
  build-depends:
    , base >= 4.19.2.0
    , aeson ^>= 2.2
    , base-compat-constptr ^>=0.1
    , bytestring ^>= 0.12
    , containers >= 0.6.8
    , comptrans >= 0.1.0.7
    , cubix >= 0.7.0.15
    , cubix-compdata >= 1.0.2
    , hashable ^>= 1.4
    , hs-tree-sitter ^>= 13
    , megaparsec ^>= 9.6
    , mtl ^>= 2.3
    , parser-combinators ^>= 1.3
    , path ^>= 0.9
    , path-io ^>= 1.6
    , resourcet ^>= 1.3
    , streaming ^>= 0.2.4
    , template-haskell >= 2.21.0.0
    , text >= 2.1.2
    , transformers ^>= 0.6
    , unordered-containers ^>= 0.2
    , vector >= 0.13.2.0
    , tree-sitter-sui-move
    , pretty-simple

library
  import: language
  import: ghc-options
  import: dependencies
  hs-source-dirs: src
  exposed-modules:
    Cubix.TreeSitter
    Streaming.Extra
    Text.Megaparsec.TreeSitter
  
-- executable gen-syntax
--   import: language
--   import: dependencies
--   import: ghc-options
--   import: rts-options
--   main-is: Main.hs
--   hs-source-dirs:
--     gen-syntax
--   other-modules:
--     Options
--   build-depends:
--     , cubix-tree-sitter
--     , neat-interpolation ^>= 0.5
--     , optparse-applicative
--     , optparse-generic ^>= 1.5

executable gen-ast
  import: language
  import: dependencies
  import: ghc-options
  import: rts-options
  main-is: Main.hs
  other-modules:
    TreeSitter.GenerateAst.Internal.CodeGen
    TreeSitter.GenerateAst.Internal.Data
    TreeSitter.GenerateAst.Internal.Grammar

  hs-source-dirs: gen-ast/app
  build-depends:
    , doclayout ^>= 0.5
    , doctemplates ^>= 0.11
    , fgl ^>= 5.8
    , file-embed ^>= 0.0
    , optparse-applicative ^>= 0.18

executable gen-mod
  import: language
  import: dependencies
  import: ghc-options
  import: rts-options
  main-is: Main.hs
  other-modules:
    TreeSitter.GenerateAst.Internal.CodeGen
    TreeSitter.GenerateAst.Internal.Data
    TreeSitter.GenerateAst.Internal.Grammar

  hs-source-dirs: gen-mod/app
  build-depends:
    , doclayout ^>= 0.5
    , doctemplates ^>= 0.11
    , fgl ^>= 5.8
    , file-embed ^>= 0.0
    , optparse-applicative ^>= 0.18

executable gen-parser
  import: language
  import: dependencies
  import: ghc-options
  import: rts-options
  main-is: Parser.hs
  other-modules:
    TreeSitter.GenerateAst.Internal.CodeGen
    TreeSitter.GenerateAst.Internal.Data
    TreeSitter.GenerateAst.Internal.Grammar

  hs-source-dirs: gen-mod/app
  build-depends:
    , doclayout ^>= 0.5
    , doctemplates ^>= 0.11
    , fgl ^>= 5.8
    , file-embed ^>= 0.0
    , optparse-applicative ^>= 0.18
